--- a/mission.html
+++ b/mission.html
@@ -14,7 +14,7 @@
     <title>MISSION</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="img/img/facicon-65c068a24d62d.webp">
 
     <!-- Google Fonts -->
     <link
